[package]
name = "rust-healthcheck"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
metrics = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34-deprecated"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
schemars = "1.1"
rand = "0.9"
url = "2"

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
